--- a/index.html
+++ b/index.html
@@ -1,85 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
+  </head>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
+  <body>
+    <nav class="navbar padding-vertical--sm">
+      <div class="container navbar__container">
+        <div class="navbar__logo-box"><img src="images/logo.svg" class="navbar__logo" alt="Logos" /></div>
+        <ul class="navbar__list font-bold">
+          <li class="navbar__list-item"><a href="#" class="navbar__link">Features</a></li>
+          <li class="navbar__list-item"><a href="#" class="navbar__link">Pricing</a></li>
+          <li class="navbar__list-item"><a href="#" class="navbar__link">Resources</a></li>
+        </ul>
+        <ul class="navbar__list navbar__list--right-align font-bold">
+          <li class="navbar__list-item"><a href="#" class="navbar__link">Login</a></li>
+          <li class="navbar__list-item"><a href="#" class="btn navbar__link navbar__btn">Sign Up</a></li>
+        </ul>
+      </div>
+    </nav>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <header>
+      <div class="container header__container">
+        <h1 class="heading-primary">More than just shorter links</h1>
+        <h3>Build your brand’s recognition and get detailed insights on how your links are performing.</h3>
+      </div>
+    </header>
 
-  Features
-  Pricing
-  Resources
+    <main>
+      <div class="container main__container">
+        Get Started Shorten a link here... Shorten It! Advanced Statistics Track how your links are performing across
+        the web with our advanced statistics dashboard. Brand Recognition Boost your brand recognition with each click.
+        Generic links don’t mean a thing. Branded links help instil confidence in your content. Detailed Records Gain
+        insights into who is clicking your links. Knowing when and where people engage with your content helps inform
+        better decisions. Fully Customizable Improve brand awareness and content discoverability through customizable
+        links, supercharging audience engagement. Boost your links today Get Started Features Link Shortening Branded
+        Links Analytics Resources Blog Developers Support Company About Our Team Careers Contact
+      </div>
+    </main>
 
-  Login
-  Sign Up
-
-  More than just shorter links
-
-  Build your brand’s recognition and get detailed insights 
-  on how your links are performing.
-
-  Get Started
-  
-  Shorten a link here...
-
-  Shorten It!
-
-  Advanced Statistics
-
-  Track how your links are performing across the web with our 
-  advanced statistics dashboard.
-
-  Brand Recognition
-
-  Boost your brand recognition with each click. Generic links don’t 
-  mean a thing. Branded links help instil confidence in your content.
-
-  Detailed Records
-
-  Gain insights into who is clicking your links. Knowing when and where 
-  people engage with your content helps inform better decisions.
-
-  Fully Customizable
-
-  Improve brand awareness and content discoverability through customizable 
-  links, supercharging audience engagement.
-
-  Boost your links today
-
-  Get Started
-
-  Features
-
-  Link Shortening
-  Branded Links
-  Analytics
-
-  Resources
-
-  Blog
-  Developers
-  Support
-
-  Company
-
-  About
-  Our Team
-  Careers
-  Contact
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <footer>
+      <div class="container footer__container">
+        <div class="attribution">
+          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded
+          by <a href="#">Your Name Here</a>.
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
