Styled header and link shorted section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <nav class="navbar padding-vertical--sm">
+    <nav class="navbar padding-vertical--4rem">
       <div class="container navbar__container">
         <div class="navbar__logo-box"><img src="images/logo.svg" class="navbar__logo" alt="Logos" /></div>
         <ul class="navbar__list font-bold">
@@ -19,20 +19,36 @@
         </ul>
         <ul class="navbar__list navbar__list--right-align font-bold">
           <li class="navbar__list-item"><a href="#" class="navbar__link">Login</a></li>
-          <li class="navbar__list-item"><a href="#" class="btn navbar__link navbar__btn">Sign Up</a></li>
+          <li class="navbar__list-item"><a href="#" class="btn navbar__link">Sign Up</a></li>
         </ul>
       </div>
     </nav>
 
-    <header>
+    <header class="header padding-vertical--4rem">
       <div class="container header__container">
-        <h1 class="heading-primary">More than just shorter links</h1>
-        <h3>Build your brand’s recognition and get detailed insights on how your links are performing.</h3>
+        <div class="header__text margin-top--4rem">
+          <h1 class="heading-primary">More than just shorter links</h1>
+          <h3 class="header__subheading">
+            Build your brand’s recognition and get detailed insights on how your links are performing.
+          </h3>
+          <a href="#" class="btn btn__link header__btn font-bold margin-top--4rem">Get Started</a>
+        </div>
+        <div class="header__ilustration-box">
+          <img src="images/illustration-working.svg" class="header__ilustration" alt="Woman working on computer" />
+        </div>
       </div>
     </header>
 
-    <main>
+    <main class="main">
       <div class="container main__container">
+        <section class="link-shorter">
+          <div class="link-shorter__box">
+            <input type="text" class="link-shorter__input" placeholder="Shorten a link here..." />
+            <a href="#" class="btn link-shorter__btn font-bold">Shorten It!</a>
+          </div>
+        </section>
+        <section></section>
+        <section></section>
         Get Started Shorten a link here... Shorten It! Advanced Statistics Track how your links are performing across
         the web with our advanced statistics dashboard. Brand Recognition Boost your brand recognition with each click.
         Generic links don’t mean a thing. Branded links help instil confidence in your content. Detailed Records Gain
