--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
     <header class="header padding-vertical--4rem">
       <div class="container header__container">
-        <div class="header__text margin-top--4rem">
+        <div class="header__text mg-top--4">
           <h1 class="heading-primary">More than just shorter links</h1>
           <h3 class="header__subheading">
             Build your brand’s recognition and get detailed insights on how your links are performing.
           </h3>
-          <a href="#" class="btn btn__link header__btn font-bold margin-top--4rem">Get Started</a>
+          <a href="#" class="btn btn__link header__btn font-bold mg-top--4">Get Started</a>
         </div>
         <div class="header__ilustration-box">
           <img src="images/illustration-working.svg" class="header__ilustration" alt="Woman working on computer" />
@@ -47,17 +47,60 @@
             <a href="#" class="btn link-shorter__btn font-bold">Shorten It!</a>
           </div>
         </section>
-        <section></section>
-        <section></section>
-        Get Started Shorten a link here... Shorten It! Advanced Statistics Track how your links are performing across
-        the web with our advanced statistics dashboard. Brand Recognition Boost your brand recognition with each click.
-        Generic links don’t mean a thing. Branded links help instil confidence in your content. Detailed Records Gain
-        insights into who is clicking your links. Knowing when and where people engage with your content helps inform
-        better decisions. Fully Customizable Improve brand awareness and content discoverability through customizable
-        links, supercharging audience engagement. Boost your links today Get Started Features Link Shortening Branded
-        Links Analytics Resources Blog Developers Support Company About Our Team Careers Contact
+        <section class="statistics">
+          <h2 class="heading-secondary">Advanced Statistics</h2>
+          <h4 class="section__subheading mg-top--2">
+            <p>
+              Track how your links are performing across the web with <br />
+              our advanced statistics dashboard.
+            </p>
+          </h4>
+
+          <div class="statistics__cards-container mg-top--8">
+            <div class="card">
+              <div class="card__icon-box">
+                <img src="images/icon-brand-recognition.svg" class="card__icon" alt="Brand recognition icon" />
+              </div>
+              <h5 class="card__heading">Brand Recognition</h5>
+              <p class="card__paragraph mg-top--2">
+                Boost your brand recognition with each click. Generic links don’t mean a thing. Branded links help
+                instil confidence in your content.
+              </p>
+            </div>
+            <div class="card card-2">
+              <div class="card__icon-box">
+                <img src="images/icon-detailed-records.svg" alt="Detailed records icon" />
+              </div>
+              <h5 class="card__heading">Detailed Records</h5>
+              <p class="card__paragraph mg-top--2">
+                Gain insights into who is clicking your links. Knowing when and where people engage with your content
+                helps inform better decisions.
+              </p>
+            </div>
+            <div class="card card-3">
+              <div class="card__icon-box">
+                <img src="images/icon-fully-customizable.svg" class="card__icon" alt="Fully customizable icon" />
+              </div>
+              <h5 class="card__heading">Fully Customizable</h5>
+              <p class="card__paragraph mg-top--2">
+                Improve brand awareness and content discoverability through customizable links, supercharging audience
+                engagement
+              </p>
+            </div>
+          </div>
+        </section>
+        </main>
+        <section class="section-CTA">
+          <h2 class="section-CTA__heading heading-secondary">Boost your links today</h2>
+           Get Started Features Link Shortening Branded Links Analytics Resources Blog Developers Support Company
+          About Our Team Careers Contact Boost your links today Get Started Features Link Shortening Branded Links
+          Analytics Resources Blog Developers Support Company About Our Team Careers Contact Boost your links today Get
+          Started Features Link Shortening Branded Links Analytics Resources Blog Developers Support Company About Our
+          Team Careers Contact Boost your links today Get Started Features Link Shortening Branded Links Analytics
+          Resources Blog Developers Support Company About Our Team Careers Contact
+        </section>
       </div>
-    </main>
+    
 
     <footer>
       <div class="container footer__container">
