Styled CTA section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </section>
         <section class="statistics">
           <h2 class="heading-secondary">Advanced Statistics</h2>
-          <h4 class="section__subheading mg-top--2">
+          <h4 class="section__subheading">
             <p>
               Track how your links are performing across the web with <br />
               our advanced statistics dashboard.
@@ -89,18 +89,13 @@
             </div>
           </div>
         </section>
-        </main>
-        <section class="section-CTA">
-          <h2 class="section-CTA__heading heading-secondary">Boost your links today</h2>
-           Get Started Features Link Shortening Branded Links Analytics Resources Blog Developers Support Company
-          About Our Team Careers Contact Boost your links today Get Started Features Link Shortening Branded Links
-          Analytics Resources Blog Developers Support Company About Our Team Careers Contact Boost your links today Get
-          Started Features Link Shortening Branded Links Analytics Resources Blog Developers Support Company About Our
-          Team Careers Contact Boost your links today Get Started Features Link Shortening Branded Links Analytics
-          Resources Blog Developers Support Company About Our Team Careers Contact
-        </section>
       </div>
-    
+    </main>
+
+    <section class="section-CTA">
+      <h2 class="section-CTA__heading heading-secondary">Boost your links today</h2>
+      <a href="#" class="btn font-bold">Get Started</a>
+    </section>
 
     <footer>
       <div class="container footer__container">
@@ -112,3 +107,10 @@
     </footer>
   </body>
 </html>
+
+<!-- Get Started Features Link Shortening Branded Links Analytics Resources Blog Developers Support Company
+          About Our Team Careers Contact Boost your links today Get Started Features Link Shortening Branded Links
+          Analytics Resources Blog Developers Support Company About Our Team Careers Contact Boost your links today Get
+          Started Features Link Shortening Branded Links Analytics Resources Blog Developers Support Company About Our
+          Team Careers Contact Boost your links today Get Started Features Link Shortening Branded Links Analytics
+          Resources Blog Developers Support Company About Our Team Careers Contact -->
