Initial footer styling

--- a/index.html
+++ b/index.html
@@ -92,23 +92,62 @@
       </div>
     </main>
 
-    <section class="section-CTA">
+    <section class="section-CTA padding-vertical--6rem">
       <h2 class="section-CTA__heading heading-secondary">Boost your links today</h2>
       <a href="#" class="btn font-bold">Get Started</a>
     </section>
 
-    <footer>
+    <footer class="footer padding-vertical--4rem">
       <div class="container footer__container">
-        <div class="attribution">
-          Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded
-          by <a href="#">Your Name Here</a>.
+        <div class="footer__logo-box">
+          <img src="images/logo.svg" class="footer__logo" alt="Logo" />
         </div>
+        <div class="footer__links-box">
+          <ul class="footer__list">
+            <li class="footer__heading">Features</li>
+            <li class="footer__list-item"><a href="#" class="footer__link">Link Shortening</a></li>
+            <li class="footer__list-item"><a href="#" class="footer__link">Branded Links</a></li>
+            <li class="footer__list-item"><a href="#" class="footer__link">Analytics</a></li>
+          </ul>
+
+          <ul class="footer__list">
+            <li class="footer__heading">Resources</li>
+            <li class="footer__list-item"><a href="#" class="footer__link">Blog</a></li>
+            <li class="footer__list-item"><a href="#" class="footer__link">Developers</a></li>
+            <li class="footer__list-item"><a href="#" class="footer__link">Support</a></li>
+          </ul>
+          <ul class="footer__list">
+            <li class="footer__heading">Company</li>
+            <li class="footer__list-item"><a href="#" class="footer__link">About</a></li>
+            <li class="footer__list-item"><a href="#" class="footer__link">Our team</a></li>
+            <li class="footer__list-item"><a href="#" class="footer__link">Carees</a></li>
+            <li class="footer__list-item"><a href="#" class="footer__link">Contat</a></li>
+          </ul>
+          <ul class="footer__list footer__list-social">
+            <li class="footer__list-item">
+              <a href="#" class="footer__link"><img src="images/icon-facebook.svg" alt="Facebook icon" /></a>
+            </li>
+            <li class="footer__list-item">
+              <a href="#" class="footer__link"><img src="images/icon-twitter.svg" alt="Twitter icon" /></a>
+            </li>
+            <li class="footer__list-item">
+              <a href="#" class="footer__link"><img src="images/icon-pinterest.svg" alt="Pinterest icon" /></a>
+            </li>
+            <li class="footer__list-item">
+              <a href="#" class="footer__link"><img src="images/icon-instagram.svg" alt="Instagram icon" /></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="attribution mg-top--4">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
+        <a href="#">Ana Carolina Borba</a>
       </div>
     </footer>
   </body>
 </html>
 
-<!-- Get Started Features Link Shortening Branded Links Analytics Resources Blog Developers Support Company
+<!-- Get Started   Blog Developers Support Company
           About Our Team Careers Contact Boost your links today Get Started Features Link Shortening Branded Links
           Analytics Resources Blog Developers Support Company About Our Team Careers Contact Boost your links today Get
           Started Features Link Shortening Branded Links Analytics Resources Blog Developers Support Company About Our
