Initial API integration logic

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <div class="container main__container">
         <section class="link-shorter">
           <div class="link-shorter__box">
-            <input type="text" class="link-shorter__input" placeholder="Shorten a link here..." />
-            <a href="#" class="btn link-shorter__btn font-bold">Shorten It!</a>
+            <input type="text" class="link-shorter__input" placeholder="Shorten a link here..." id="input-link" />
+            <a href="#" class="btn link-shorter__btn font-bold" id="btn-shorten">Shorten It!</a>
           </div>
           <small class="error-msg">Plase add a link</small>
         </section>
@@ -173,5 +173,6 @@
         <a href="https://github.com/anacarolinabmv" target="_blank">Ana Carolina Borba</a>
       </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
