Implemented render shortened link and copy link btn

--- a/index.html
+++ b/index.html
@@ -48,7 +48,23 @@
           </div>
           <small class="error-msg">Plase add a link</small>
         </section>
-        <section class="statistics">
+        <section class="shortened-link__container">
+          <div class="shortened-link__box">
+            <a href="#" class="long-link">https://long-link.com</a>
+            <div class="short-link__box">
+              <a href="#" class="short-link">https://short-link.com</a>
+              <a href="#" class="btn copy-link__btn font-bold">Copy</a>
+            </div>
+          </div>
+          <div class="shortened-link__box">
+            <a href="#" class="long-link">https://long-link.com</a>
+            <div class="short-link__box">
+              <a href="#" class="short-link">https://short-link.com</a>
+              <a href="#" class="btn copy-link__btn font-bold">Copy</a>
+            </div>
+          </div>
+        </section>
+        <section class="statistics mg-top--8">
           <h2 class="heading-secondary">Advanced Statistics</h2>
           <h4 class="section__subheading">
             <p>
