Added btn to clear local storage

--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
           </div>
           <small class="error-msg">Plase add a link</small>
         </section>
-        <section class="shortened-link__container"></section>
+        <section class="shortened-link__container">
+          <a href="#" class="clear-all" id="clear-all">Clear all</a>
+        </section>
         <section class="statistics mg-top--8">
           <h2 class="heading-secondary">Advanced Statistics</h2>
           <h4 class="section__subheading">
-            <p>
+            <p class="card__paragraph">
               Track how your links are performing across the web with <br />
               our advanced statistics dashboard.
             </p>
@@ -69,7 +71,7 @@
                 instil confidence in your content.
               </p>
             </div>
-            <div class="statistics__card statistics__card--2">
+            <div class="statistics__card statistics__card-2">
               <div class="card__icon-box">
                 <img src="images/icon-detailed-records.svg" alt="Detailed records icon" />
               </div>
@@ -79,7 +81,7 @@
                 helps inform better decisions.
               </p>
             </div>
-            <div class="statistics__card statistics__card--3">
+            <div class="statistics__card statistics__card-3">
               <div class="card__icon-box">
                 <img src="images/icon-fully-customizable.svg" class="card__icon" alt="Fully customizable icon" />
               </div>
