Restyled navbar and adjusted media queries

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+    <script src="https://kit.fontawesome.com/c356afc66b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css" />
     <title>Frontend Mentor | Shortly URL shortening API Challenge</title>
   </head>
@@ -11,16 +12,22 @@
   <body>
     <nav class="navbar pd-vrt--4rem">
       <div class="container navbar__container">
-        <div class="navbar__logo-box"><img src="images/logo.svg" class="navbar__logo" alt="Logos" /></div>
-        <ul class="navbar__list font-bold">
-          <li class="navbar__list-item"><a href="#" class="navbar__link">Features</a></li>
-          <li class="navbar__list-item"><a href="#" class="navbar__link">Pricing</a></li>
-          <li class="navbar__list-item"><a href="#" class="navbar__link">Resources</a></li>
-        </ul>
-        <ul class="navbar__list right-align font-bold">
-          <li class="navbar__list-item"><a href="#" class="navbar__link">Login</a></li>
-          <li class="navbar__list-item"><a href="#" class="btn navbar__btn navbar__link">Sign Up</a></li>
-        </ul>
+        <div class="navbar__logo-box">
+          <img src="images/logo.svg" class="navbar__logo" alt="Logos" />
+        </div>
+
+        <div class="navbar__links">
+          <ul class="navbar__list font-bold">
+            <li class="navbar__list-item"><a href="#" class="navbar__link">Features</a></li>
+            <li class="navbar__list-item"><a href="#" class="navbar__link">Pricing</a></li>
+            <li class="navbar__list-item"><a href="#" class="navbar__link">Resources</a></li>
+          </ul>
+          <ul class="navbar__list font-bold">
+            <li class="navbar__list-item"><a href="#" class="navbar__link">Login</a></li>
+            <li class="navbar__list-item"><a href="#" class="btn navbar__btn navbar__link">Sign Up</a></li>
+          </ul>
+        </div>
+        <a href="#" class="navbar__nav-icon"><img src="images/icon-navigation.svg" alt="Navigation icon" /></a>
       </div>
     </nav>
 
