Styled mobile navigation

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <li class="navbar__list-item"><a href="#" class="btn navbar__btn navbar__link">Sign Up</a></li>
           </ul>
         </div>
-        <a href="#" class="navbar__nav-icon"><img src="images/icon-navigation.svg" alt="Navigation icon" /></a>
+        <a href="#" class="navbar__nav-icon" id="mobile-nav"
+          ><img src="images/icon-navigation.svg" alt="Navigation icon"
+        /></a>
       </div>
     </nav>
 
@@ -40,7 +42,7 @@
           </h3>
           <a href="#" class="btn header__btn font-bold mg-top--4">Get Started</a>
         </div>
-        <div class="header__ilustration-box overlay">
+        <div class="header__ilustration-box">
           <img src="images/illustration-working.svg" class="header__ilustration" alt="Woman working on computer" />
         </div>
       </div>
